force-app/main/campusAlert/objects/Facility_Event__c/Facility_Event__c.object-meta.xml
<CustomObject>
    <label>Facility Event</label>
    <nameField>
        <label>Facility Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>