force-app/main/campusAlert/objects/Facility_Event__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Facility Events</relationshipLabel>
    <relationshipName>Facility_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>