force-app/main/campusAlert/objects/Facility_Event__c/fields/Event_Start__c.field-meta.xml
<CustomField>
    <fullName>Event_Start__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Event Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>